# onestep

./: .gitignore  README.md  manage.py  pyproject.toml
account/: admin.py  forms.py  views.py
account/migrations/: 0001_initial.py
account/templates/registration/: login.html  signup.html
examples/: forms.py  urls.py  views.py
examples/templates/: form-example01.html
onestep/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
