[tool.poetry]
name = "onestep"
version = "0.1.0"
description = "A thousand miles beging with a single step."
authors = ["bzhao <gold.radio_00@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
requests = "^2.28.1"
ipykernel = "^6.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
